Allows to read pipelines from HDFS